crates/bitnet-models/tests/snapshots/snapshot_wave34__w34_load_config_default.snap
---
source: crates/bitnet-models/tests/snapshot_wave34.rs
expression: "format!(\"use_mmap={} validate_checksums={}\", cfg.use_mmap,\ncfg.validate_checksums,)"
---
use_mmap=true validate_checksums=true
